--- a/LoginForm Module (Swing)/sqliteJDBCconnection/nbproject/project.properties
+++ b/LoginForm Module (Swing)/sqliteJDBCconnection/nbproject/project.properties
@@ -29,11 +29,21 @@ dist.jar=${dist.dir}/sqliteJDBCconnection.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar.jar=C:\\Users\\IITG\\Desktop\\jcalendar.jar\\jcalendar.jar
+file.reference.jdatepicker-1.3.4.jar=C:\\Users\\IITG\\Desktop\\jdatepicker-1.3.4.jar
+file.reference.mail.jar=C:\\Users\\IITG\\Desktop\\javamail1_4_7\\javamail-1.4.7\\mail.jar
+file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Users\\IITG\\Desktop\\mysql-connector-java-5.1.18\\mysql-connector-java-5.1.18\\mysql-connector-java-5.1.18-bin.jar
+file.reference.simple-java-mail-4.4.5.jar=C:\\Users\\IITG\\Desktop\\simple-java-mail-4.4.5.jar
 file.reference.sqlite-jdbc-3.20.0.jar=C:\\Users\\IITG\\Desktop\\New folder\\sqlite-jdbc-3.20.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.20.0.jar}
+    ${file.reference.sqlite-jdbc-3.20.0.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.simple-java-mail-4.4.5.jar}:\
+    ${file.reference.jcalendar.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
