--- a/LoginModule(JavaFX)/LoginModule/nbproject/private/private.properties
+++ b/LoginModule(JavaFX)/LoginModule/nbproject/private/private.properties
@@ -3,4 +3,4 @@ auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 endorsed.javafx.ant.classpath=.
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files (x86)\\SeaMonkey\\seamonkey.exe
-user.properties.file=C:\\Users\\IITG\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Naso\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
