Updated_doctor_module

--- a/ANDROID/NasoSpeech_Android/gradle.properties
+++ b/ANDROID/NasoSpeech_Android/gradle.properties
@@ -12,10 +12,10 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Fri Feb 09 17:15:54 IST 2018
-systemProp.http.proxyPassword=pathsala
+#Tue Feb 13 14:34:53 IST 2018
+systemProp.http.proxyPassword=94354abc123
 systemProp.http.proxyHost=202.141.80.30
 systemProp.http.nonProxyHosts=localhost,127.0.0.1,.iitg.ernet.in,.iitg.ac.in,202.141.80.0/23
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=3128
-systemProp.http.proxyUser=dikshita
+systemProp.http.proxyUser=abhilash.baruah
