--- a/ANDROID/NasoSpeech_Android/app/src/main/AndroidManifest.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dod.nasospeech_android">
+    package="com.example.dod.applicationnaso">
 
     <application
         android:allowBackup="true"
@@ -16,8 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity2" />
-        <activity android:name=".Activity3"></activity>
+        <activity
+            android:name=".doctor_dashboard"
+            android:label="@string/title_activity_doctor_dashboard"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".signup" />
+        <activity
+            android:name=".Forgot_Password"
+            android:label="@string/title_activity_forgot__password"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
     </application>
 
 </manifest>
