--- a/ANDROID/NasoSpeech_Android/app/src/main/AndroidManifest.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dod.applicationnaso">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,6 +34,16 @@
         <activity android:name=".Articulation" />
         <activity android:name=".Intelligibility" />
         <activity android:name=".VoicingError" />
+        <activity android:name=".Appointments" />
+        <activity android:name=".ProfileDetails" />
+        <activity android:name=".Support" />
+        <activity
+            android:name=".Patients"
+            android:label="@string/title_activity_patients"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AddPatient"
+            android:label="@string/title_activity_add_patient"></activity>
     </application>
 
 </manifest>
