--- a/ANDROID/NasoSpeech_Android/app/src/main/AndroidManifest.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -41,9 +45,7 @@
             android:name=".Patients"
             android:label="@string/title_activity_patients"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".AddPatient"
-            android:label="@string/title_activity_add_patient"></activity>
+        <activity android:name=".AddPatient"></activity>
     </application>
 
 </manifest>
