--- a/ANDROID/NasoSpeech_Android/app/src/main/AndroidManifest.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/AndroidManifest.xml
@@ -6,10 +6,10 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"></uses-permission>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 
     <application
         android:allowBackup="true"
@@ -38,14 +38,18 @@
         <activity android:name=".Articulation" />
         <activity android:name=".Intelligibility" />
         <activity android:name=".VoicingError" />
-        <activity android:name=".Appointments" />
         <activity android:name=".ProfileDetails" />
         <activity android:name=".Support" />
         <activity
             android:name=".Patients"
             android:label="@string/title_activity_patients"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AddPatient"></activity>
+        <activity android:name=".AddPatient" />
+        <activity
+            android:name=".Appointments"
+            android:label="@string/title_activity_appointments"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".AddAppointment"></activity>
     </application>
 
 </manifest>
